Update index.html with header icon.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcultor</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="website icon" href="https://cdn.imgbin.com/23/17/10/imgbin-iphone-ios-7-computer-icons-scientific-calculator-iphone-EEnvZcPBC6paRpM68stegxKAm.jpg">
 
 </head>
 
